test/expected/cli/type_classification.out
== -t keyword:
keyword
== -t builtin:
builtin
== -t alias:
alias
== -t function:
function
== -t conditional bracket keyword:
keyword
== default keyword spelling:
for is a shell keyword
== default builtin spelling:
echo is a shell builtin
== default alias spelling:
g is an alias for git
== default function spelling:
f is a shell function
== -a lists a keyword with no file:
for is a shell keyword
== -p stays silent for a builtin:
rc=0
== -t stays silent for a missing name:
rc=1
== the default mood classifies a missing coreutility fallback:
builtin
calc
calc
== type skips a blocked candidate before a runnable candidate:
runnable
== a missing name reports not found:
shit: 1:1: error: Builtin `type`: The command 'missing_xyz' was not found.
     1 |  type missing_xyz
       |  ^~~~~~~~~~~~~~~~ here.
rc=1
